--- a/docs_zh/manuals/engine/release-notes/27.md
+++ b/docs_zh/manuals/engine/release-notes/27.md
@@ -6,7 +6,7 @@ keywords: docker, docker engine, ce, 新功能, 发行说明
 toc_min: 1
 toc_max: 2
 tags:
-  - 发行说明
+  - release-notes
 aliases:
 - /engine/release-notes/27.1/
 - /engine/release-notes/27.2/
