--- a/docs_zh/manuals/engine/release-notes/28.md
+++ b/docs_zh/manuals/engine/release-notes/28.md
@@ -1,12 +1,12 @@
 ---
-title: Docker Engine 28 版本发行说明
+title: Docker Engine version 28 release notes
 linkTitle: Engine v28
-description: 了解 Docker Engine 的新功能、错误修复和破坏性变更
-keywords: docker, docker engine, ce, 新功能, 发行说明
+description: 了解 Docker Engine 的新功能、错误修复和重大变更
 toc_min: 1
 toc_max: 2
 tags:
-  - 发行说明
+- Release notes
+keywords: docker, docker engine, ce, whats new, release notes
 aliases:
 - /engine/release-notes/28.0/
 - /engine/release-notes/28.1/
@@ -15,34 +15,33 @@ aliases:
 - /engine/release-notes/28.4/
 - /engine/release-notes/28.5/
 ---
-
-本页面描述了 Docker Engine 28 版本的最新变更、新增功能、已知问题和修复。
+本页描述了 Docker Engine 版本 28 的最新更改、新增功能、已知问题和修复。
 
 有关更多信息，请参阅：
 
-- 已弃用和已移除的功能，请参阅[已弃用的 Engine 功能](../deprecated.md)。
-- Engine API 的变更，请参阅[Engine API 版本历史](/reference/api/engine/version-history/)。
+- 已弃用和移除的功能，请参阅[已弃用的 Engine 功能](../deprecated.md)。
+- Engine API 的更改，请参阅 [Engine API 版本历史](/reference/api/engine/version-history/)。
 
 ## 28.5.2
 
 {{< release-date date="2025-11-05" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.5.2 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.5.2)
 - [moby/moby, 28.5.2 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.5.2)
 
 > [!CAUTION]
-> 此版本包含针对 runc 中三个高危安全漏洞的修复：
+> 此版本包含对 runc 中三个严重安全漏洞的修复：
 > - [CVE-2025-31133](https://github.com/opencontainers/runc/security/advisories/GHSA-9493-h29p-rfm2)
 > - [CVE-2025-52565](https://github.com/opencontainers/runc/security/advisories/GHSA-qw9x-cqr3-wc7r)
 > - [CVE-2025-52881](https://github.com/opencontainers/runc/security/advisories/GHSA-cgrx-mc8f-2prm)
 > 
-> 这三个漏洞最终都允许（通过不同方法）绕过 runc 对写入任意 `/proc` 文件的限制，从而实现完全的容器逃逸。
+> 这三个漏洞最终都允许（通过不同方法）通过绕过 runc 对写入任意 `/proc` 文件的限制来实现完全的容器逃逸。
 
-### 错误修复和增强功能
+### Bug 修复和增强
 
-- dockerd-rootless.sh：如果未安装 slirp4netns，则尝试使用 pasta (passt)。[moby/moby#51162](https://github.com/moby/moby/pull/51162)
+- dockerd-rootless.sh: 如果未安装 slirp4netns，则尝试使用 pasta (passt)。[moby/moby#51162](https://github.com/moby/moby/pull/51162)
 
 ### 打包更新
 
@@ -52,7 +51,7 @@ aliases:
 
 ### 弃用
 
-- Go-SDK: cli/command/image/build: 弃用 `DefaultDockerfileName`, `DetectArchiveReader`, `WriteTempDockerfile`, `ResolveAndValidateContextPath`。这些工具仅在内部使用，将在下一个版本中移除。[docker/cli#6610](https://github.com/docker/cli/pull/6610)
+- Go-SDK: cli/command/image/build: 弃用 `DefaultDockerfileName`、`DetectArchiveReader`、`WriteTempDockerfile`、`ResolveAndValidateContextPath`。这些工具仅在内部使用，将在下一个版本中移除。[docker/cli#6610](https://github.com/docker/cli/pull/6610)
 - Go-SDK: cli/command/image/build: 弃用 IsArchive 工具。[docker/cli#6560](https://github.com/docker/cli/pull/6560)
 - Go-SDK: opts: 弃用 `ValidateMACAddress`。[docker/cli#6560](https://github.com/docker/cli/pull/6560)
 - Go-SDK: opts: 弃用 ListOpts.Delete()。[docker/cli#6560](https://github.com/docker/cli/pull/6560)
@@ -61,12 +60,12 @@ aliases:
 
 {{< release-date date="2025-10-08" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.5.1 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.5.1)
 - [moby/moby, 28.5.1 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.5.1)
 
-### 错误修复和增强功能
+### Bug 修复和增强
 
 - 将 BuildKit 更新至 v0.25.1。[moby/moby#51137](https://github.com/moby/moby/pull/51137)
 - 将 Go 运行时更新至 [1.24.8](https://go.dev/doc/devel/release#go1.24.8)。[moby/moby#51133](https://github.com/moby/moby/pull/51133), [docker/cli#6541](https://github.com/docker/cli/pull/6541)
@@ -80,44 +79,44 @@ aliases:
 
 {{< release-date date="2025-10-02" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.5.0 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.5.0)
 - [moby/moby, 28.5.0 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.5.0)
 
 > [!WARNING]
-> **Raspberry Pi OS 32 位 (armhf) 弃用**
+> **Raspberry Pi OS 32位 (armhf) 弃用**
 >
-> Docker Engine v28 将是支持 Raspberry Pi OS 32 位 (armhf) 的最后一个主要版本。
-> 从 Docker Engine v29 开始，新的主要版本将**不再提供** Raspberry Pi OS 32 位 (armhf) 的软件包。
+> Docker Engine v28 将是支持 Raspberry Pi OS 32位 (armhf) 的最后一个主要版本。
+> 从 Docker Engine v29 开始，新的主要版本将**不再提供** Raspberry Pi OS 32位 (armhf) 的软件包。
 >
 > #### 迁移选项
-> - **64 位 ARM：** 安装 Debian `arm64` 软件包（完全支持）。
-> - **32 位 ARM (v7)：** 安装 Debian `armhf` 软件包（针对 ARMv7 CPU）。
+> - **64位 ARM:** 安装 Debian `arm64` 软件包（完全支持）。
+> - **32位 ARM (v7):** 安装 Debian `armhf` 软件包（针对 ARMv7 CPU）。
 >
 > **注意：** 基于 ARMv6 架构的旧设备不再受官方软件包支持，包括：
 > - Raspberry Pi 1 (Model A/B/A+/B+)
 > - Raspberry Pi Zero 和 Zero W
 
-### 错误修复和增强功能
+### Bug 修复和增强
 
-- 在 `docker info` 中不再为 CLI 插件目录中的损坏符号链接打印警告。[docker/cli#6476](https://github.com/docker/cli/pull/6476)
-- 修复在事件 `Actor.ID` 为空时，`stats` 可能发生的 panic。[docker/cli#6471](https://github.com/docker/cli/pull/6471)
+- 在 CLI 插件目录中，对于损坏的符号链接，不要在 `docker info` 中打印警告。[docker/cli#6476](https://github.com/docker/cli/pull/6476)
+- 修复在空的 `Actor.ID` 事件上 `stats` 时的 panic。[docker/cli#6471](https://github.com/docker/cli/pull/6471)
 
 ### 打包更新
 
-- 移除对旧版 CBC 密码套件的支持。[docker/cli#6474](https://github.com/docker/cli/pull/6474)
+- 移除对传统 CBC 密码套件的支持。[docker/cli#6474](https://github.com/docker/cli/pull/6474)
 - 将 Buildkit 更新至 [v0.25.0](https://github.com/moby/buildkit/releases/tag/v0.25.0)。[moby/moby#51075](https://github.com/moby/moby/pull/51075)
 - 将 Dockerfile 语法更新至 [v1.19.0](https://github.com/moby/buildkit/releases/tag/dockerfile%2F1.19.0)。[moby/moby#51075](https://github.com/moby/moby/pull/51075)
 
 ### 网络
 
-- 消除了从数据存储中删除 `endpoint_count` 时的无害警告。[moby/moby#51064](https://github.com/moby/moby/pull/51064)
-- 修复了导致 IPAM 插件在 Windows 上无法加载的错误。[moby/moby#51035](https://github.com/moby/moby/pull/51035)
+- 消除了关于从数据存储中删除 `endpoint_count` 的无害警告。[moby/moby#51064](https://github.com/moby/moby/pull/51064)
+- 修复导致 IPAM 插件在 Windows 上无法加载的错误。[moby/moby#51035](https://github.com/moby/moby/pull/51035)
 
 ### API
 
-- 弃用对内核内存 TCP 计费 (`KernelMemoryTCP`) 的支持。[moby/moby#51067](https://github.com/moby/moby/pull/51067)
+- 弃用对内核内存 TCP 计费（`KernelMemoryTCP`）的支持。[moby/moby#51067](https://github.com/moby/moby/pull/51067)
 - 修复 `GET containers/{name}/checkpoints` 在没有检查点时返回 `null` 而不是空 JSON 数组的问题。[moby/moby#51052](https://github.com/moby/moby/pull/51052)
 
 ### Go SDK
@@ -127,11 +126,11 @@ aliases:
 
 ### 弃用
 
-- Go-SDK: cli/command: 弃用 `DockerCli.Apply`。此方法不再使用，如果在下一个版本中没有剩余用法，将被移除。[docker/cli#6497](https://github.com/docker/cli/pull/6497)
+- Go-SDK: cli/command: 弃用 `DockerCli.Apply`。此方法不再使用，如果没有剩余用途，将在下一个版本中移除。[docker/cli#6497](https://github.com/docker/cli/pull/6497)
 - Go-SDK: cli/command: 弃用 `DockerCli.ContentTrustEnabled`。此方法不再使用，将在下一个版本中移除。[docker/cli#6495](https://github.com/docker/cli/pull/6495)
 - Go-SDK: cli/command: 弃用 `DockerCli.DefaultVersion`。此方法不再使用，将在下一个版本中移除。[docker/cli#6491](https://github.com/docker/cli/pull/6491)
 - Go-SDK: cli/command: 弃用 `ResolveDefaultContext` 工具。[docker/cli#6529](https://github.com/docker/cli/pull/6529)
-- Go-SDK: cli/command: 弃用 `WithContentTrustFromEnv`, `WithContentTrust` 选项。这些选项在内部使用，将在下一个版本中移除。[docker/cli#6489](https://github.com/docker/cli/pull/6489)
+- Go-SDK: cli/command: 弃用 `WithContentTrustFromEnv`、`WithContentTrust` 选项。这些选项在内部使用，将在下一个版本中移除。[docker/cli#6489](https://github.com/docker/cli/pull/6489)
 - Go-SDK: cli/manifest/store: 弃用 `IsNotFound()`。[docker/cli#6514](https://github.com/docker/cli/pull/6514)
 - Go-SDK: templates: 弃用 NewParse() 函数。[docker/cli#6469](https://github.com/docker/cli/pull/6469)
 
@@ -139,23 +138,23 @@ aliases:
 
 {{< release-date date="2025-09-03" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.4.0 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.4.0)
 - [moby/moby, 28.4.0 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.4.0)
 
-### 新增功能
+### 新增
 
-- 允许 Docker CLI 在 docker 上下文元数据中存在键值对 (`"GODEBUG":"..."`) 时设置 `GODEBUG` 环境变量。[docker/cli#6399](https://github.com/docker/cli/pull/6399)
+- 允许 Docker CLI 在 docker 上下文元数据中存在键值对（`"GODEBUG":"..."`）时设置 `GODEBUG` 环境变量。[docker/cli#6399](https://github.com/docker/cli/pull/6399)
 
-### 错误修复和增强功能
+### Bug 修复和增强
 
 - 为 `docker pull` 和 `docker image pull` 添加 shell 补全。[docker/cli#6420](https://github.com/docker/cli/pull/6420)
-- 修复 v28.3.3 中的一个回归问题，该问题可能导致在客户端未发送 `X-Registry-Auth` 标头时，`docker push` 发生 panic。[moby/moby#50738](https://github.com/moby/moby/pull/50738)
-- Windows：可能修复了拉取镜像时出现“访问被拒绝”错误的问题。[moby/moby#50871](https://github.com/moby/moby/pull/50871)
-- containerd 镜像存储：修复了在本地构建的非原生镜像上调用 `docker history` 时，因 `snapshot X does not exist` 而失败的问题。[moby/moby#50875](https://github.com/moby/moby/pull/50875)
-- containerd 镜像存储：修复 `docker image prune` 以发出正确的 `untag` 和 `delete` 事件，并仅列出已删除镜像的根摘要，而不是每个 blob。[moby/moby#50837](https://github.com/moby/moby/pull/50837)
-- 在因缺少身份验证而导致失败后，从 `docker push` 和 `docker pull` 中移除交互式登录提示。[docker/cli#6256](https://github.com/docker/cli/pull/6256)
+- 修复 v28.3.3 中的一个回归，如果客户端未发送 `X-Registry-Auth` 头，可能导致 `docker push` 时发生 panic。[moby/moby#50738](https://github.com/moby/moby/pull/50738)
+- Windows: 可能修复拉取镜像时出现"访问被拒绝"错误的问题。[moby/moby#50871](https://github.com/moby/moby/pull/50871)
+- containerd 镜像存储：修复对本地构建的非本地镜像调用 `docker history` 时失败，并显示 `snapshot X does not exist` 的错误。[moby/moby#50875](https://github.com/moby/moby/pull/50875)
+- containerd 镜像存储：修复 `docker image prune` 发出正确的 `untag` 和 `delete` 事件，并且只列出已删除镜像的根摘要，而不是每个 blob。[moby/moby#50837](https://github.com/moby/moby/pull/50837)
+- 在因缺少身份验证而失败后，从 `docker push` 和 `docker pull` 中移除交互式登录提示。[docker/cli#6256](https://github.com/docker/cli/pull/6256)
 
 ### 打包更新
 
@@ -166,7 +165,7 @@ aliases:
 
 ### 网络
 
-- 修复了可能导致在 live-restore 时容器重启缓慢的问题。[moby/moby#50829](https://github.com/moby/moby/pull/50829)
+- 修复在 live-restore 时可能导致容器重启缓慢的问题。[moby/moby#50829](https://github.com/moby/moby/pull/50829)
 
 ### API
 
@@ -174,32 +173,32 @@ aliases:
 
 ### Go SDK
 
-- 弃用 profiles 包，该包已迁移至 [github.com/moby/profiles](https://github.com/moby/profiles)。[moby/moby#50513](https://github.com/moby/moby/pull/50513)
+- 弃用已迁移到 [github.com/moby/profiles](https://github.com/moby/profiles) 的 profiles 包。[moby/moby#50513](https://github.com/moby/moby/pull/50513)
 
 ### 弃用
 
 - 弃用对 `--tlscacert`、`--tlscert` 和 `--tlskey` 命令行标志的引号值的特殊处理。[docker/cli#6291](https://github.com/docker/cli/pull/6291)
-- 将旧版链接环境变量 (`DOCKER_KEEP_DEPRECATED_LEGACY_LINKS_ENV_VARS`) 标记为在 v28.4 中弃用，并计划在 v30.0 中移除。[docker/cli#6309](https://github.com/docker/cli/pull/6309)
-- Go-SDK: 弃用字段 `NetworkSettingsBase.Bridge`、结构体 `NetworkSettingsBase`、`DefaultNetworkSettings` 的所有字段以及结构体 `DefaultNetworkSettings`。[moby/moby#50839](https://github.com/moby/moby/pull/50839)
-- Go-SDK: api/types: `build.CacheDiskUsage`, `container.DiskUsage`, `images.DiskUsage` 和 `volumes.DiskUsage` 现已弃用，并将在下一个主要版本中移除。[moby/moby#50768](https://github.com/moby/moby/pull/50768)
+- 在 v28.4 中将传统链接环境变量（`DOCKER_KEEP_DEPRECATED_LEGACY_LINKS_ENV_VARS`）标记为已弃用，并设置在 v30.0 中移除。[docker/cli#6309](https://github.com/docker/cli/pull/6309)
+- Go-SDK: 弃用字段 `NetworkSettingsBase.Bridge`、结构 `NetworkSettingsBase`、`DefaultNetworkSettings` 的所有字段以及结构 `DefaultNetworkSettings`。[moby/moby#50839](https://github.com/moby/moby/pull/50839)
+- Go-SDK: api/types: `build.CacheDiskUsage`、`container.DiskUsage`、`images.DiskUsage` 和 `volumes.DiskUsage` 现已弃用，将在下一个主要版本中移除。[moby/moby#50768](https://github.com/moby/moby/pull/50768)
 - Go-SDK: cli-plugins/manager: 弃用 `ReexecEnvvar`。[docker/cli#6411](https://github.com/docker/cli/pull/6411)
-- Go-SDK: cli-plugins/manager: 弃用注解别名 (`CommandAnnotationPlugin`, `CommandAnnotationPluginVendor`, `CommandAnnotationPluginVersion`, `CommandAnnotationPluginInvalid`, `CommandAnnotationPluginCommandPath`)，改用 `cli-plugins/manager/metadata` 中的等效项。[docker/cli#6298](https://github.com/docker/cli/pull/6298)
-- Go-SDK: cli-plugins/manager: 弃用元数据别名 (`NamePrefix`, `MetadataSubcommandName`, `HookSubcommandName`, `Metadata`, `ReexecEnvvar`)，改用 `cli-plugins/manager/metadata` 中的等效项。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
-- Go-SDK: cli-plugins/manager: 移除 `Candidate` 接口，该接口仅用于内部使用。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
-- Go-SDK: cli-plugins/manager: 移除 `NewPluginError` 函数，该函数仅用于内部使用。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
+- Go-SDK: cli-plugins/manager: 弃用注释别名（`CommandAnnotationPlugin`、`CommandAnnotationPluginVendor`、`CommandAnnotationPluginVersion`、`CommandAnnotationPluginInvalid`、`CommandAnnotationPluginCommandPath`），推荐使用 `cli-plugins/manager/metadata` 中的等效项。[docker/cli#6298](https://github.com/docker/cli/pull/6298)
+- Go-SDK: cli-plugins/manager: 弃用元数据别名（`NamePrefix`、`MetadataSubcommandName`、`HookSubcommandName`、`Metadata`、`ReexecEnvvar`），推荐使用 `cli-plugins/manager/metadata` 中的等效项。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
+- Go-SDK: cli-plugins/manager: 移除 `Candidate` 接口，该接口仅供内部使用。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
+- Go-SDK: cli-plugins/manager: 移除 `NewPluginError` 函数，该函数仅供内部使用。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
 - Go-SDK: cli-plugins/manager: 移除已弃用的 `ResourceAttributesEnvvar` 常量。[docker/cli#6269](https://github.com/docker/cli/pull/6269)
 - Go-SDK: cli/command/builder: 弃用 `NewBuilderCommand` 和 `NewBakeStubCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
 - Go-SDK: cli/command/builder: 弃用 `NewPruneCommand`。[docker/cli#6343](https://github.com/docker/cli/pull/6343)
 - Go-SDK: cli/command/checkpoint: 弃用 `NewCheckpointCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/checkpoint: 弃用 `NewFormat`, `FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/checkpoint: 弃用 `NewFormat`、`FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/completion: 弃用 `NoComplete`。[docker/cli#6405](https://github.com/docker/cli/pull/6405)
 - Go-SDK: cli/command/completion: 移除已弃用的 `ValidArgsFn`。[docker/cli#6259](https://github.com/docker/cli/pull/6259)
 - Go-SDK: cli/command/config: 弃用 `NewConfigCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/config: 弃用 `NewFormat`, `FormatWrite`, `InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
-- Go-SDK: cli/command/config: 弃用 `RunConfigCreate`, `CreateOptions`, `RunConfigInspect`, `InspectOptions`, `RunConfigList`, `ListOptions`, `RunConfigRemove`, 和 `RemoveOptions`。[docker/cli#6369](https://github.com/docker/cli/pull/6369)
-- Go-SDK: cli/command/container: 弃用 `NewBuildCommand`, `NewPullCommand`, `NewPushCommand`, `NewImagesCommand`, `NewImageCommand`, `NewHistoryCommand`, `NewImportCommand`, `NewLoadCommand`, `NewRemoveCommand`, `NewSaveCommand`, `NewTagCommand`, `NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/container: 弃用 `NewDiffFormat`, `DiffFormatWrite`。这些函数仅在内部使用，将在下一个版本中移除。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
-- Go-SDK: cli/command/container: 弃用 `NewRunCommand`, `NewExecCommand`, `NewPsCommand`, `NewContainerCommand`, `NewAttachCommand`, `NewCommitCommand`, `NewCopyCommand`, `NewCreateCommand`, `NewDiffCommand`, `NewExportCommand`, `NewKillCommand`, `NewLogsCommand`, `NewPauseCommand`, `NewPortCommand`, `NewRenameCommand`, `NewRestartCommand`, `NewRmCommand`, `NewStartCommand`, `NewStatsCommand`, `NewStopCommand`, `NewTopCommand`, `NewUnpauseCommand`, `NewUpdateCommand`, `NewWaitCommand`, `NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
+- Go-SDK: cli/command/config: 弃用 `NewFormat`、`FormatWrite`、`InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/config: 弃用 `RunConfigCreate`、`CreateOptions`、`RunConfigInspect`、`InspectOptions`、`RunConfigList`、`ListOptions`、`RunConfigRemove` 和 `RemoveOptions`。[docker/cli#6369](https://github.com/docker/cli/pull/6369)
+- Go-SDK: cli/command/container: 弃用 `NewBuildCommand`、`NewPullCommand`、`NewPushCommand`、`NewImagesCommand`、`NewImageCommand`、`NewHistoryCommand`、`NewImportCommand`、`NewLoadCommand`、`NewRemoveCommand`、`NewSaveCommand`、`NewTagCommand`、`NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
+- Go-SDK: cli/command/container: 弃用 `NewDiffFormat`、`DiffFormatWrite`。这些函数仅在内部使用，将在下一个版本中移除。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/container: 弃用 `NewRunCommand`、`NewExecCommand`、`NewPsCommand`、`NewContainerCommand`、`NewAttachCommand`、`NewCommitCommand`、`NewCopyCommand`、`NewCreateCommand`、`NewDiffCommand`、`NewExportCommand`、`NewKillCommand`、`NewLogsCommand`、`NewPauseCommand`、`NewPortCommand`、`NewRenameCommand`、`NewRestartCommand`、`NewRmCommand`、`NewStartCommand`、`NewStatsCommand`、`NewStopCommand`、`NewTopCommand`、`NewUnpauseCommand`、`NewUpdateCommand`、`NewWaitCommand`、`NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
 - Go-SDK: cli/command/context: 弃用 `NewContextCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
 - Go-SDK: cli/command/context: 弃用 `RunCreate` 和 `CreateOptions`。[docker/cli#6403](https://github.com/docker/cli/pull/6403)
 - Go-SDK: cli/command/context: 弃用 `RunExport` 和 `ExportOptions`。[docker/cli#6403](https://github.com/docker/cli/pull/6403)
@@ -208,59 +207,59 @@ aliases:
 - Go-SDK: cli/command/context: 弃用 `RunUpdate` 和 `UpdateOptions`。[docker/cli#6403](https://github.com/docker/cli/pull/6403)
 - Go-SDK: cli/command/context: 弃用 `RunUse`。[docker/cli#6403](https://github.com/docker/cli/pull/6403)
 - Go-SDK: cli/command/image: 弃用 `AuthResolver` 工具。[docker/cli#6357](https://github.com/docker/cli/pull/6357)
-- Go-SDK: cli/command/image: 弃用 `NewHistoryFormat`, `HistoryWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341), [docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/image: 弃用 `NewHistoryFormat`、`HistoryWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341), [docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/manifest: 弃用 `NewManifestCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/network: 弃用 `NewFormat`, `FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/network: 弃用 `NewFormat`、`FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/network: 弃用 `NewNetworkCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/node: 弃用 `NewFormat`, `FormatWrite`, `InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/node: 弃用 `NewFormat`、`FormatWrite`、`InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/node: 弃用 `NewNodeCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/plugin: 弃用 `NewFormat`, `FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/plugin: 弃用 `NewFormat`、`FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/plugin: 弃用 `NewPluginCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/registry: 弃用 `NewLoginCommand`, `NewLogoutCommand`, `NewSearchCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/registry: 弃用 `NewSearchFormat`, `SearchWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/registry: 弃用 `NewLoginCommand`、`NewLogoutCommand`、`NewSearchCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
+- Go-SDK: cli/command/registry: 弃用 `NewSearchFormat`、`SearchWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/registry: 弃用 `OauthLoginEscapeHatchEnvVar` 常量。[docker/cli#6413](https://github.com/docker/cli/pull/6413)
-- Go-SDK: cli/command/secret: 弃用 `NewFormat`, `FormatWrite`, `InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/secret: 弃用 `NewFormat`、`FormatWrite`、`InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/secret: 弃用 `NewSecretCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/service: 弃用 `NewFormat`, `InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/service: 弃用 `NewFormat`、`InspectFormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/service: 弃用 `NewServiceCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
 - Go-SDK: cli/command/stack: 弃用 `NewStackCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/stack: 弃用 `RunList`, `RunServices`。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
+- Go-SDK: cli/command/stack: 弃用 `RunList`、`RunServices`。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
 - Go-SDK: cli/command/swarm: 弃用 `NewSwarmCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/system: 弃用 `NewVersionCommand`, `NewInfoCommand`, `NewSystemCommand`, `NewEventsCommand`, `NewInspectCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/task: 弃用 `NewTaskFormat`, `FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/system: 弃用 `NewVersionCommand`、`NewInfoCommand`、`NewSystemCommand`、`NewEventsCommand`、`NewInspectCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
+- Go-SDK: cli/command/task: 弃用 `NewTaskFormat`、`FormatWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
 - Go-SDK: cli/command/trust: 弃用 `NewTrustCommand`。此函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command/trust: 弃用 `SignedTagInfo`, `SignerInfo`, `NewTrustTagFormat`, `NewSignerInfoFormat`, `TagWrite`, `SignerInfoWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
-- Go-SDK: cli/command/volume: 弃用 `NewVolumeCommand`, `NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
-- Go-SDK: cli/command: 移除 `AddTrustSigningFlags`, `AddTrustVerificationFlags`, 和 `AddPlatformFlag` 工具，这些仅在内部使用。[docker/cli#6311](https://github.com/docker/cli/pull/6311)
+- Go-SDK: cli/command/trust: 弃用 `SignedTagInfo`、`SignerInfo`、`NewTrustTagFormat`、`NewSignerInfoFormat`、`TagWrite`、`SignerInfoWrite`。[docker/cli#6341](https://github.com/docker/cli/pull/6341)
+- Go-SDK: cli/command/volume: 弃用 `NewVolumeCommand`、`NewPruneCommand`。这些函数将在下一个版本中移除。[docker/cli#6312](https://github.com/docker/cli/pull/6312)
+- Go-SDK: cli/command: 移除 `AddTrustSigningFlags`、`AddTrustVerificationFlags` 和 `AddPlatformFlag` 工具，这些工具仅在内部使用。[docker/cli#6311](https://github.com/docker/cli/pull/6311)
 - Go-SDK: cli/command: 移除已弃用的 `ConfigureAuth` 工具。[docker/cli#6257](https://github.com/docker/cli/pull/6257)
 - Go-SDK: cli/command: 移除已弃用的 `CopyToFile` 工具。[docker/cli#6257](https://github.com/docker/cli/pull/6257)
 - Go-SDK: cli/config/types: 更新 `AuthConfig.Email` 字段的弃用消息。[docker/cli#6392](https://github.com/docker/cli/pull/6392)
-- Go-SDK: cli: 弃用 `VisitAll`, `DisableFlagsInUseLine` 工具。这些工具仅在内部使用，将在下一个版本中移除。[docker/cli#6276](https://github.com/docker/cli/pull/6276)
+- Go-SDK: cli: 弃用 `VisitAll`、`DisableFlagsInUseLine` 工具。这些工具仅在内部使用，将在下一个版本中移除。[docker/cli#6276](https://github.com/docker/cli/pull/6276)
 - Go-SDK: cli: 移除 `HasCompletionArg` 工具。此工具仅在内部使用。[docker/cli#6276](https://github.com/docker/cli/pull/6276)
 - Go-SDK: 弃用 `cli/command.RegistryAuthenticationPrivilegedFunc`。[docker/cli#6256](https://github.com/docker/cli/pull/6256)
 - Go-SDK: 弃用 cli/command/stack/formatter。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
 - Go-SDK: 弃用 cli/command/stack/loader。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
 - Go-SDK: 弃用 cli/command/stack/options。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
 - Go-SDK: 弃用 cli/command/stack/swarm。[docker/cli#6391](https://github.com/docker/cli/pull/6391)
-- Go-SDK: opts: 弃用 `NewNamedListOptsRef`, `NewNamedMapOpts`, `NamedListOpts`, `NamedMapOpts`, 和 `NamedOption`。这些类型和函数不再使用，将在下一个版本中移除。[docker/cli#6292](https://github.com/docker/cli/pull/6292)
-- Go-SDK: opts: 弃用 `ParseEnvFile`，改用 `kvfile.Parse`。[docker/cli#6381](https://github.com/docker/cli/pull/6381)
+- Go-SDK: opts: 弃用 `NewNamedListOptsRef`、`NewNamedMapOpts`、`NamedListOpts`、`NamedMapOpts` 和 `NamedOption`。这些类型和函数不再使用，将在下一个版本中移除。[docker/cli#6292](https://github.com/docker/cli/pull/6292)
+- Go-SDK: opts: 弃用 `ParseEnvFile`，推荐使用 `kvfile.Parse`。[docker/cli#6381](https://github.com/docker/cli/pull/6381)
 - Go-SDK: opts: 弃用 `QuotedString`。此工具不再使用，将在下一个版本中移除。[docker/cli#6275](https://github.com/docker/cli/pull/6275)
 - Go-SDK: opts: 弃用 `ValidateHost` 工具。此函数不再使用，将在下一个版本中移除。[docker/cli#6280](https://github.com/docker/cli/pull/6280)
-- Go-SDK: pkg/jsonmessage: 弃用 `JSONMessage.From`, `JSONMessage.Time`, 和 `JSONMessage.TimeNano` 字段，因为 API 不再为进度消息返回这些字段。请改用 `events.Message` 类型来解组 `/events` 响应。[moby/moby#50762](https://github.com/moby/moby/pull/50762)
+- Go-SDK: pkg/jsonmessage: 弃用 `JSONMessage.From`、`JSONMessage.Time` 和 `JSONMessage.TimeNano` 字段，因为 API 不再为进度消息返回这些字段。请改用 `events.Message` 类型来解析 `/events` 响应。[moby/moby#50762](https://github.com/moby/moby/pull/50762)
 - Go-SDK: cli/registry/client 包已弃用，将在下一个版本中移除。[docker/cli#6313](https://github.com/docker/cli/pull/6313)
 
 ## 28.3.3
 
 {{< release-date date="2025-07-29" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.3.3 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.3.3)
 - [moby/moby, 28.3.3 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.3.3)
 
 ### 安全
 
-此版本修复了一个问题，即在 firewalld 重新加载后，已发布的容器端口可能直接从本地网络访问，即使它们本应仅通过环回地址访问。[CVE-2025-54388](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2025-54388) / [GHSA-x4rx-4gw3-53p4](https://github.com/moby/moby/security/advisories/GHSA-x4rx-4gw3-53p4) / [moby/moby#50506](https://github.com/moby/moby/pull/50506)。
+此版本修复了一个问题，在 firewalld 重新加载后，发布的容器端口可以直接从本地网络访问，即使它们本意是只能通过环回地址访问。[CVE-2025-54388](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2025-54388) / [GHSA-x4rx-4gw3-53p4](https://github.com/moby/moby/security/advisories/GHSA-x4rx-4gw3-53p4) / [moby/moby#50506](https://github.com/moby/moby/pull/50506)。
 
 ### 打包更新
 
@@ -272,9 +271,26 @@ aliases:
 
 {{< release-date date="2025-07-09" >}}
 
-有关此版本中拉取请求和变更的完整列表，请参阅相关的 GitHub 里程碑：
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub 里程碑：
 
 - [docker/cli, 28.3.2 里程碑](https://github.com/docker/cli/issues?q=is%3Aclosed+milestone%3A28.3.2)
 - [moby/moby, 28.3.2 里程碑](https://github.com/moby/moby/issues?q=is%3Aclosed+milestone%3A28.3.2)
 
-### 错误修复和增强
+### Bug 修复和增强
+
+- 修复 `--use-api-socket` 在 targeting 远程 daemon 时无法正常工作的问题。[docker/cli#6157](https://github.com/docker/cli/pull/6157)
+- 修复在启用调试日志记录时打印杂散的"otel error"日志的问题。[docker/cli#6160](https://github.com/docker/cli/pull/6160)
+- 通过 SSH 连接到远程 daemon 时引用 SSH 参数，以避免意外的扩展。[docker/cli#6147](https://github.com/docker/cli/pull/6147)
+- 在 `docker login` 和 `docker logout` 期间设置了 `DOCKER_AUTH_CONFIG` 时发出警告。[docker/cli#6163](https://github.com/docker/cli/pull/6163)
+
+### 打包更新
+
+- 将 Compose 更新至 [v2.38.2](https://github.com/docker/compose/releases/tag/v2.38.2)。[docker/docker-ce-packaging#1225](https://github.com/docker/docker-ce-packaging/pull/1225)
+- 将 Docker Model CLI 插件更新至 [v0.1.33](https://github.com/docker/model-cli/releases/tag/v0.1.33)。[docker/docker-ce-packaging#1227](https://github.com/docker/docker-ce-packaging/pull/1227)
+- 将 Go 运行时更新至 1.24.5。[moby/moby#50354](https://github.com/moby/moby/pull/50354)
+
+## 28.3.1
+
+{{< release-date date="2025-07-02" >}}
+
+有关此版本中 pull request 和更改的完整列表，请参阅相关的 GitHub
